[package]
name = "bitcore"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "2.3.0"
serialport = "4.5.0"
rand = "0.8.5"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
anyhow = "1.0.86"

[dev-dependencies]
assert_cmd = "2.0.0"
