[package]
name = "bitcore"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "2.3.0"
serialport = "4.5.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.87"
log = "0.4.22"

[dev-dependencies]
assert_cmd = "2.0.0"
